--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -35,6 +35,11 @@
 							<f:selectItems value="#{sukupuolet}" />
 						</h:selectOneRadio>
 					</h:panelGrid>
+					<h:outputText value="Medialupa" />
+					<h:panelGrid>
+						<ace:message for="form:medialupa" />
+						<h:selectBooleanCheckbox value="#{harrastaja.medialupa}" id="medialupa" />
+					</h:panelGrid>
 					<h:outputText value="Syntymäaika" rendered="#{!harrastaja.tilapäinen}" />
 					<h:panelGrid rendered="#{!harrastaja.tilapäinen}">
 						<ace:message for="form:syntymäaika" />
