--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -77,6 +77,9 @@
 				<ace:tabPane label="Perustiedot">
 					<ui:include src="perustiedot/perustiedot.xhtml" />
 				</ace:tabPane>
+				<ace:tabPane label="Tulosteet">
+					<ui:include src="tulosteet.xhtml" />
+				</ace:tabPane>
 				<ace:tabPane label="Raportit">
 					<ui:include src="raportit.xhtml" />
 				</ace:tabPane>
